# video-analyzer

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  run_video_analyzer.py  setup.cfg
src/video_analyzer/: __init__.py  analyzer.py  cli.py  extractor.py  llm_client.py
tasks/: bottle_filling_check.md  empty_shelf_detection.md  package_delivery_confirmation.md  patient_bed_exit_alert.md  venipuncture_procedure.md
tests/: test_chaining.py
