[metadata]
name = video-analyzer
version = 0.1.0
description = Extract video frames and perform chained OpenAI vision analysis
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
package_dir = = src
python_requires = >=3.10
install_requires =
    opencv-python
    pillow
    openai
    python-dotenv

[options.packages.find]
where = src
